# mentor_tasks

./: .gitignore  pyproject.toml
sobes_tasks/: 1.py  10.py  11.py  14.py  15.py  16.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
task_1/: 1.py  2.py  3.py  4.py  5.py  6.py  methods.py  singleton.py  solid(i).py  solid(l).py  solid(o).py  solid(s).py
task_2/: data.py  queries.py  tables.py
task_3/: data.py  generate_data.py  indexes.py  queries.py
task_5/: models.py  queries.py
task_5/db/: database.py  init_data.py
task_5/migrations/: env.py
task_5/migrations/versions/: 92e48f94a310_init_migration.py  dc897cdcbc58_.py
